# ic-py-http-request

./: pyproject.toml
http_request/: main.py
