[tool.poetry]
name = "http-request"
version = "0.1.0"
description = ""
authors = ["Moritz Fuller <moritz.fuller@dfinity.org>"]
readme = "README.md"
packages = [{include = "http_request"}]

[tool.poetry.dependencies]
python = "^3.11"
ic-py = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
